--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,65 @@
     display: none;
   }
 }
+.department .list {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 0px 0px 150px;
+}
+.department .list li + li {
+  border-left: 1px solid #ddd;
+}
+.department .list li {
+  width: 180px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.department .list li div {
+  width: 90px;
+  height: 90px;
+}
+.department .list li div img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s;
+}
+.department .list li b {
+  width: 100%;
+  font-size: 40px;
+  padding-bottom: 5px;
+}
+.department .list li p {
+  width: 100%;
+  font-size: 20px;
+}
+.department .wrap {
+  width: 100%;
+}
+.department .wrap article {
+  float: left;
+  width: 280px;
+  margin-right: 20px;
+}
+.department .wrap article:nth-of-type(4) {
+  margin-right: 0px;
+}
+.department .wrap article .pic {
+  width: 100%;
+  height: 280px;
+  overflow: hidden;
+  filter: grayscale(1);
+}
+.department .wrap article .pic img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .location {
   width: 100%;
   display: flex;
