--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,11 @@
     display: none;
   }
 }
+.department h2 {
+  font: bold 30px/1 "arial";
+  color: #000;
+  padding-bottom: 60px;
+}
 .department .list {
   width: 100%;
   display: flex;
@@ -446,6 +451,11 @@
   padding: 0px 0px 150px;
   height: 350px;
 }
+.department .wrap h2 {
+  font: bold 30px/1 "arial";
+  color: #000;
+  padding-bottom: 60px;
+}
 .department .wrap article {
   float: left;
   width: 280px;
@@ -459,11 +469,15 @@
   height: 280px;
   overflow: hidden;
   filter: grayscale(1);
+  transition: 1s;
 }
 .department .wrap article .pic img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.department .wrap article:hover .pic {
+  filter: grayscale(0);
 }
 
 .location {
