--- a/scss/_department.scss
+++ b/scss/_department.scss
@@ -1,4 +1,9 @@
 .department {
+	h2 {
+		font: bold 30px/1 "arial";
+		color: #000;
+		padding-bottom: 60px;
+	}
 	.list {
 		width: 100%;
 		display: flex;
@@ -41,6 +46,11 @@
 		width: 100%;
 		padding: 0px 0px 150px;
 		height: 350px;
+		h2 {
+			font: bold 30px/1 "arial";
+			color: #000;
+			padding-bottom: 60px;
+		}
 		article {
 			float: left;
 			width: 280px;
@@ -53,10 +63,16 @@
 				height: 280px;
 				overflow: hidden;
 				filter: grayscale(1);
+				transition: 1s;
 				img {
 					width: 100%;
 					height: 100%;
 					object-fit: cover;
+				}
+			}
+			&:hover {
+				.pic {
+					filter: grayscale(0);
 				}
 			}
 		}
