--- a/css/style.css
+++ b/css/style.css
@@ -497,6 +497,116 @@
   text-align: center;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+ol,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+fieldset {
+  border: none;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+.h {
+  position: absolute;
+  top: -9999px;
+  opacity: 0;
+}
+
+.join .inner .wrap {
+  width: 100%;
+}
+.join .inner .wrap h2 {
+  font: bold 30px/1 "arial";
+  color: #000;
+  padding-bottom: 60px;
+}
+.join .inner .wrap #terms {
+  width: 100%;
+  height: 200px;
+  resize: none;
+  padding: 10px 20px;
+  font: 13px/1.5 "arial";
+  color: #888;
+  background: #efefef;
+}
+.join .inner .wrap .agreement {
+  padding-bottom: 70px;
+}
+.join .inner .wrap .agreement label[for=agree] {
+  font-size: 14px;
+}
+.join .inner .wrap table {
+  width: 100%;
+  border-top: 2px solid #999;
+  border-bottom: 2px solid #999;
+}
+.join .inner .wrap table th,
+.join .inner .wrap table td {
+  border-bottom: 1px solid #ddd;
+  padding: 15px 25px;
+}
+.join .inner .wrap table th {
+  width: 20%;
+}
+.join .inner .wrap table th input[type=reset],
+.join .inner .wrap table th input[type=submit] {
+  width: 30%;
+  height: 40px;
+  margin: 10px;
+  font: bold 14px/40px "arial";
+  color: #555;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.join .inner .wrap table th input[type=reset]:hover,
+.join .inner .wrap table th input[type=submit]:hover {
+  background-color: rgba(235, 213, 69, 0.989);
+  color: #fff;
+  border: 1px solid rgba(235, 213, 69, 0.989);
+}
+.join .inner .wrap table td {
+  border-left: 1px solid #aaa;
+}
+.join .inner .wrap table td input[type=text],
+.join .inner .wrap table td input[type=password],
+.join .inner .wrap table td select {
+  width: 40%;
+  background: rgba(0, 0, 0, 0.03);
+  padding: 10px;
+  border: 1px solid #aaa;
+}
+.join .inner .wrap table td input[type=radio],
+.join .inner .wrap table td input[type=chekbox] {
+  margin-right: 30px;
+}
+.join .inner .wrap table td textarea {
+  resize: none;
+  width: 60%;
+  height: 150px;
+  background: rgba(0, 0, 0, 0.03);
+  padding: 10px;
+  border: 1px solid #aaa;
+}
+.join .inner .wrap table td p {
+  font: 11px/1 "맑은 고딕";
+  color: hotpink;
+  margin-top: 5px;
+}
+
 .location {
   width: 100%;
   display: flex;
