--- a/scss/_department.scss
+++ b/scss/_department.scss
@@ -62,6 +62,25 @@
 			&:nth-of-type(4) {
 				margin-right: 0px;
 			}
+			.txt {
+				h3 {
+					text-align: center;
+					padding: 20px;
+				}
+				h4 {
+					text-align: center;
+					padding: 20px;
+					a {
+						font: bold 20px/1 "arial";
+						color: #000;
+					}
+				}
+				p {
+					font: bold 20px/1 "arial";
+					color: #000;
+					text-align: center;
+				}
+			}
 			.pic {
 				width: 100%;
 				height: 280px;
@@ -78,19 +97,6 @@
 				.pic {
 					filter: grayscale(0);
 				}
-			}
-			h3 {
-				text-align: center;
-				padding: 20px;
-				a {
-					font: bold 20px/1 "arial";
-					color: #000;
-				}
-			}
-			p {
-				font: bold 20px/1 "arial";
-				color: #000;
-				text-align: center;
 			}
 		}
 	}
