--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -59,7 +59,9 @@
 
 	.container {
 		width: 1180px;
-		height: 700px;
+		height: 550px;
+		padding: 0px 0 150px;
+		margin: 0 auto;
 		h1 {
 			color: #333;
 			float: left;
