--- a/css/style.css
+++ b/css/style.css
@@ -165,9 +165,8 @@
 .content .inner h1 {
   font-weight: bold;
   font-size: 50px;
-  line-height: 1px;
   color: #000;
-  padding-bottom: 70px;
+  margin-bottom: 70px;
 }
 .content .inner h1 span {
   font-family: "BlackHanSans";
@@ -241,111 +240,31 @@
 }
 
 @media screen and (max-width: 1179px) {
-  #header .inner {
+  #header_sub .inner {
     width: 100%;
     max-width: 1180px;
     overflow: hidden;
     padding: 0px 10px;
   }
-  #header .inner .menuWeb {
+  #header_sub .inner .menuWeb {
     display: none;
   }
-  #header .inner .btnCall {
+  #header_sub .inner .btnCall {
     display: block;
   }
-  #header .inner .menuMo {
+  #header_sub .inner .menuMo {
     display: block;
   }
-  #visual .slider .inner {
-    top: 40%;
+  .content .inner {
     width: 100%;
     max-width: 1180px;
     overflow: hidden;
     padding: 0px 10px;
   }
-  #visual .slider .inner h1 {
-    font: bold 40px/1 "arial";
-  }
-  #visual .Slide_btn .prev {
-    left: 30px;
-  }
-  #visual .Slide_btn .next {
-    right: 30px;
-  }
-  #information.action {
-    padding: 100px 0;
-  }
-  #information.action .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-    display: block;
-  }
-  #information.action .inner .wrap {
-    width: 100%;
-  }
-  #information.action .inner .wrap h1 {
-    text-align: center;
-    margin: 30px 0px 40px;
-    padding-top: 0;
-  }
-  #information.action .inner .wrap p {
-    text-align: center;
-  }
-  #information.action .inner .wrap a {
-    margin: 30px auto 0px;
-  }
-  #information.action .QiuckJoin {
-    margin: 50px auto 0;
-  }
-  #information.action .QiuckJoin form h1 {
-    text-align: center;
-  }
-  #information.action .QiuckJoin form fieldset table th input[type=submit] {
-    width: 100%;
-    margin-left: 0px;
-    margin-top: 20px;
-    height: 30px;
-  }
-  #services {
-    padding: 100px 0px 600px;
-  }
-  #services .innerH1 {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #services main section article {
-    width: 100%;
-    height: 500px;
-    display: block;
-  }
-  #services main section article .pic {
-    width: 100%;
-    height: auto;
-  }
-  #services main section article .wrap {
-    height: auto;
-    width: 100%;
-  }
-  #services main section article .wrap a {
-    height: auto;
-    width: 100%;
-    padding: 10px 20px;
-    margin: 50px 10px;
-  }
-  #LatestProjects {
-    padding: 100px 0px;
-  }
-  #LatestProjects .inner .wrap article {
-    margin-right: 10px;
-  }
-  #footer {
+  #footer_sub {
     padding: 80px 0;
   }
-  #footer .inner {
+  #footer_sub .inner {
     width: 100%;
     max-width: 1180px;
     overflow: hidden;
@@ -355,112 +274,13 @@
   }
 }
 @media screen and (max-width: 539px) {
-  #visual .slider .inner {
-    top: 40%;
-  }
-  #visual .slider .inner h1 {
-    font-size: 25px;
-    font-weight: bold;
-  }
-  #visual .Slide_btn .prev {
-    width: 30px;
-    height: 30px;
-    left: 20px;
-  }
-  #visual .Slide_btn .next {
-    right: 20px;
-    height: 30px;
-    width: 30px;
-  }
-  #information.action .inner .wrap h1 {
-    font-weight: bold;
-    font-size: 25px;
-    line-height: 1px;
-  }
-  #information.action .QiuckJoin {
-    margin: 50px auto 0;
-  }
-  #services {
-    padding: 100px 0px 400px;
-  }
-  #services .innerH1 {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #services main .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #services main .inner ul {
-    padding-top: 40px;
-  }
-  #services main .inner ul li {
-    padding: 0px 20px;
-  }
-  #services main .inner ul li a {
-    padding: 0px 0px;
-    font: bold 13px/1 "arial";
-  }
-  #services main section article {
-    display: block;
-    width: 100%;
-    height: 300px;
-  }
-  #services main section article .pic {
-    width: 100%;
-    height: auto;
-  }
-  #services main section article .wrap {
-    height: auto;
-    width: 100%;
-    padding: 20px 60px 20px 20px;
-  }
-  #services main section article .wrap h2 {
-    font: bold 25px/1.3 "arial";
-    padding: 0 0 20px;
-  }
-  #services main section article .wrap p {
-    font: 10px/1.3 "arial";
-  }
-  #services main section article .wrap a {
-    height: auto;
-    width: 100%;
-    padding: 10px 10px;
-    margin: 30px 10px 10px;
-  }
-  #LatestProjects {
-    padding: 50px 0px;
-  }
-  #LatestProjects::after {
-    content: "";
-    display: block;
-    clear: both;
-  }
-  #LatestProjects .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #LatestProjects .inner .wrap {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  #LatestProjects .inner .wrap article {
-    margin-bottom: 20px;
-  }
-  #footer .inner {
+  #footer_sub .inner {
     padding: 10px;
   }
-  #footer .inner h1 {
+  #footer_sub .inner h1 {
     margin-bottom: 20px;
   }
-  #footer .inner ul li {
+  #footer_sub .inner ul li {
     margin-left: 0px;
     margin: 5px;
   }
@@ -607,9 +427,8 @@
 .department h2 {
   font-weight: bold;
   font-size: 30px;
-  line-height: 1px;
   color: #444;
-  padding-bottom: 60px;
+  margin-bottom: 80px;
 }
 .department .list {
   width: 100%;
@@ -656,7 +475,6 @@
 }
 .department .wrap {
   width: 100%;
-  height: 100%;
   height: 550px;
   flex-wrap: wrap;
   display: flex;
@@ -670,13 +488,12 @@
   left: 0px;
   font-weight: bold;
   font-size: 30px;
-  line-height: 1px;
   color: #444;
 }
 .department .wrap article {
   flex: 1;
   position: relative;
-  padding-top: 20px;
+  padding-top: 50px;
   opacity: 0.6;
   cursor: pointer;
   transition: all 1s;
@@ -693,7 +510,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 45px;
+  top: 70px;
   left: -200px;
   opacity: 0;
   transition: 1s;
@@ -701,12 +518,12 @@
 }
 .department .wrap article .txt {
   width: 100%;
-  padding: 40px 10px 10px;
+  padding: 50px 10px 10px;
 }
 .department .wrap article .txt h3 {
   text-align: left;
   transition: 1s;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   color: white;
   font-family: "BlackHanSans";
   font-size: 20px;
@@ -723,7 +540,7 @@
 .department .wrap article .txt p {
   transition: 1s;
   font-family: "BlackHanSans";
-  font-size: 15px;
+  font-size: 20px;
   color: white;
   font-weight: bold;
   text-align: right;
@@ -770,6 +587,64 @@
   filter: grayscale(0);
 }
 
+@media screen and (max-width: 1179px) {
+  .department .wrap {
+    height: 100%;
+    max-width: 1180px;
+    overflow: hidden;
+    padding: 0px 10px;
+  }
+  .department article {
+    width: 100%;
+  }
+  .department article .pic {
+    height: 100%;
+  }
+}
+@media screen and (max-width: 539px) {
+  .department h2 {
+    text-align: center;
+  }
+  .department .list {
+    justify-content: center;
+    margin: 0px auto;
+  }
+  .department .list li + li {
+    border-left: none;
+  }
+  .department .list li {
+    margin-bottom: 30px;
+  }
+  .department .wrap {
+    width: 100%;
+    max-width: 1180px;
+    overflow: hidden;
+    padding: 0px 10px;
+  }
+  .department .wrap h2 {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .department .wrap article {
+    width: 100%;
+    padding: 50px 0px;
+  }
+  .department .wrap article .txt {
+    padding: 30px 10px 10px;
+  }
+  .department .wrap article .pic {
+    height: 100%;
+  }
+  .department .wrap article:hover .txt h3 {
+    font-size: 20px;
+  }
+  .department .wrap article:hover .txt h3::after {
+    width: 60px;
+  }
+  .department .wrap article:hover .txt p {
+    font-size: 15px;
+  }
+}
 .gallery #searchBox {
   width: 100%;
   padding: 50px 60px 0px;
@@ -844,7 +719,7 @@
   width: 100%;
 }
 .gallery #wrap #list .item div p {
-  opacity: 0;
+  opacity: 1;
   font-size: 14px;
   font-weight: bold;
   margin-bottom: 15px;
@@ -854,7 +729,7 @@
 .gallery #wrap #list .item div span {
   transition: all 0.5s;
   font-size: 10px;
-  opacity: 0;
+  opacity: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -899,21 +774,34 @@
   color: rgba(235, 213, 69, 0.989);
 }
 
+@media screen and (max-width: 1179px) {
+  .gallery #wrap {
+    max-width: 1180px;
+  }
+}
+@media screen and (max-width: 539px) {
+  .gallery #wrap {
+    max-width: 1180px;
+  }
+  .gallery #wrap #list .item {
+    width: 33.3333333333%;
+  }
+}
 .join .inner .wrap {
   width: 100%;
 }
 .join .inner .wrap h2 {
   font-weight: bold;
   font-size: 30px;
-  line-height: 1px;
   color: #444;
-  padding-bottom: 60px;
+  margin: 0px 0px 50px;
 }
 .join .inner .wrap #terms {
   width: 100%;
   height: 200px;
   resize: none;
   padding: 10px 20px;
+  margin-bottom: 15px;
   font-family: "BlackHanSans";
   font-size: 13px;
   letter-spacing: 1px;
@@ -921,10 +809,10 @@
   background: #efefef;
 }
 .join .inner .wrap .agreement {
-  padding-bottom: 70px;
+  margin-bottom: 50px;
 }
 .join .inner .wrap .agreement label[for=agree] {
-  font-size: 14px;
+  font-size: 16px;
   font-family: "BlackHanSans";
 }
 .join .inner .wrap table {
@@ -982,6 +870,42 @@
   border: 1px solid #aaa;
 }
 
+@media screen and (max-width: 1179px) {
+  .join .inner .wrap {
+    max-width: 1180px;
+    padding: 0px 10px;
+  }
+  .join .inner .wrap h2 {
+    line-height: 0px;
+  }
+  .join .inner .wrap #terms {
+    height: 100%;
+  }
+}
+@media screen and (max-width: 539px) {
+  .join .inner .wrap table th {
+    width: 30%;
+  }
+  .join .inner .wrap table td input[type=text],
+  .join .inner .wrap table td input[type=password],
+  .join .inner .wrap table td select {
+    width: 80%;
+    background: rgba(0, 0, 0, 0.03);
+    padding: 10px;
+    border: 1px solid #aaa;
+  }
+  .join .inner .wrap table td input[type=radio],
+  .join .inner .wrap table td input[type=checkbox] {
+    margin-right: 5px;
+  }
+  .join .inner .wrap table td label {
+    font-size: 14px;
+  }
+  .join .inner .wrap table td #comments {
+    font-size: 15px;
+    width: 100%;
+  }
+}
 .location {
   width: 100%;
   display: flex;
@@ -1349,9 +1273,8 @@ table {
 .content .inner h1 {
   font-weight: bold;
   font-size: 50px;
-  line-height: 1px;
   color: #000;
-  padding-bottom: 70px;
+  margin-bottom: 70px;
 }
 .content .inner h1 span {
   font-family: "BlackHanSans";
@@ -1425,111 +1348,31 @@ table {
 }
 
 @media screen and (max-width: 1179px) {
-  #header .inner {
+  #header_sub .inner {
     width: 100%;
     max-width: 1180px;
     overflow: hidden;
     padding: 0px 10px;
   }
-  #header .inner .menuWeb {
+  #header_sub .inner .menuWeb {
     display: none;
   }
-  #header .inner .btnCall {
+  #header_sub .inner .btnCall {
     display: block;
   }
-  #header .inner .menuMo {
+  #header_sub .inner .menuMo {
     display: block;
   }
-  #visual .slider .inner {
-    top: 40%;
+  .content .inner {
     width: 100%;
     max-width: 1180px;
     overflow: hidden;
     padding: 0px 10px;
   }
-  #visual .slider .inner h1 {
-    font: bold 40px/1 "arial";
-  }
-  #visual .Slide_btn .prev {
-    left: 30px;
-  }
-  #visual .Slide_btn .next {
-    right: 30px;
-  }
-  #information.action {
-    padding: 100px 0;
-  }
-  #information.action .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-    display: block;
-  }
-  #information.action .inner .wrap {
-    width: 100%;
-  }
-  #information.action .inner .wrap h1 {
-    text-align: center;
-    margin: 30px 0px 40px;
-    padding-top: 0;
-  }
-  #information.action .inner .wrap p {
-    text-align: center;
-  }
-  #information.action .inner .wrap a {
-    margin: 30px auto 0px;
-  }
-  #information.action .QiuckJoin {
-    margin: 50px auto 0;
-  }
-  #information.action .QiuckJoin form h1 {
-    text-align: center;
-  }
-  #information.action .QiuckJoin form fieldset table th input[type=submit] {
-    width: 100%;
-    margin-left: 0px;
-    margin-top: 20px;
-    height: 30px;
-  }
-  #services {
-    padding: 100px 0px 600px;
-  }
-  #services .innerH1 {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #services main section article {
-    width: 100%;
-    height: 500px;
-    display: block;
-  }
-  #services main section article .pic {
-    width: 100%;
-    height: auto;
-  }
-  #services main section article .wrap {
-    height: auto;
-    width: 100%;
-  }
-  #services main section article .wrap a {
-    height: auto;
-    width: 100%;
-    padding: 10px 20px;
-    margin: 50px 10px;
-  }
-  #LatestProjects {
-    padding: 100px 0px;
-  }
-  #LatestProjects .inner .wrap article {
-    margin-right: 10px;
-  }
-  #footer {
+  #footer_sub {
     padding: 80px 0;
   }
-  #footer .inner {
+  #footer_sub .inner {
     width: 100%;
     max-width: 1180px;
     overflow: hidden;
@@ -1539,112 +1382,13 @@ table {
   }
 }
 @media screen and (max-width: 539px) {
-  #visual .slider .inner {
-    top: 40%;
-  }
-  #visual .slider .inner h1 {
-    font-size: 25px;
-    font-weight: bold;
-  }
-  #visual .Slide_btn .prev {
-    width: 30px;
-    height: 30px;
-    left: 20px;
-  }
-  #visual .Slide_btn .next {
-    right: 20px;
-    height: 30px;
-    width: 30px;
-  }
-  #information.action .inner .wrap h1 {
-    font-weight: bold;
-    font-size: 25px;
-    line-height: 1px;
-  }
-  #information.action .QiuckJoin {
-    margin: 50px auto 0;
-  }
-  #services {
-    padding: 100px 0px 400px;
-  }
-  #services .innerH1 {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #services main .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #services main .inner ul {
-    padding-top: 40px;
-  }
-  #services main .inner ul li {
-    padding: 0px 20px;
-  }
-  #services main .inner ul li a {
-    padding: 0px 0px;
-    font: bold 13px/1 "arial";
-  }
-  #services main section article {
-    display: block;
-    width: 100%;
-    height: 300px;
-  }
-  #services main section article .pic {
-    width: 100%;
-    height: auto;
-  }
-  #services main section article .wrap {
-    height: auto;
-    width: 100%;
-    padding: 20px 60px 20px 20px;
-  }
-  #services main section article .wrap h2 {
-    font: bold 25px/1.3 "arial";
-    padding: 0 0 20px;
-  }
-  #services main section article .wrap p {
-    font: 10px/1.3 "arial";
-  }
-  #services main section article .wrap a {
-    height: auto;
-    width: 100%;
-    padding: 10px 10px;
-    margin: 30px 10px 10px;
-  }
-  #LatestProjects {
-    padding: 50px 0px;
-  }
-  #LatestProjects::after {
-    content: "";
-    display: block;
-    clear: both;
-  }
-  #LatestProjects .inner {
-    width: 100%;
-    max-width: 1180px;
-    overflow: hidden;
-    padding: 0px 10px;
-  }
-  #LatestProjects .inner .wrap {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  #LatestProjects .inner .wrap article {
-    margin-bottom: 20px;
-  }
-  #footer .inner {
+  #footer_sub .inner {
     padding: 10px;
   }
-  #footer .inner h1 {
+  #footer_sub .inner h1 {
     margin-bottom: 20px;
   }
-  #footer .inner ul li {
+  #footer_sub .inner ul li {
     margin-left: 0px;
     margin: 5px;
   }
@@ -2334,7 +2078,6 @@ table {
   float: left;
   width: 50%;
   overflow: hidden;
-  min-height: 350px;
   background-color: rgba(235, 213, 69, 0.989);
   padding: 60px 100px 60px 60px;
   height: 500px;
