--- a/scss/_department.scss
+++ b/scss/_department.scss
@@ -2,9 +2,8 @@
 	h2 {
 		font-weight: bold;
 		font-size: 30px;
-		line-height: 1px;
 		color: #444;
-		padding-bottom: 60px;
+		margin-bottom: 80px;
 	}
 	.list {
 		width: 100%;
@@ -53,7 +52,6 @@
 
 	.wrap {
 		width: 100%;
-		height: 100%;
 		height: 550px;
 		flex-wrap: wrap;
 		display: flex;
@@ -67,13 +65,12 @@
 
 			font-weight: bold;
 			font-size: 30px;
-			line-height: 1px;
 			color: #444;
 		}
 		article {
 			flex: 1;
 			position: relative;
-			padding-top: 20px;
+			padding-top: 50px;
 			opacity: 0.6;
 			cursor: pointer;
 			transition: all 1s;
@@ -89,7 +86,7 @@
 				width: 100%;
 				height: 100%;
 				position: absolute;
-				top: 45px;
+				top: 70px;
 				left: -200px;
 				opacity: 0;
 				transition: 1s;
@@ -97,11 +94,11 @@
 			}
 			.txt {
 				width: 100%;
-				padding: 40px 10px 10px;
+				padding: 50px 10px 10px;
 				h3 {
 					text-align: left;
 					transition: 1s;
-					margin-bottom: 30px;
+					margin-bottom: 20px;
 					color: white;
 					// color: black;
 					font-family: "BlackHanSans";
@@ -119,7 +116,7 @@
 				p {
 					transition: 1s;
 					font-family: "BlackHanSans";
-					font-size: 15px;
+					font-size: 20px;
 					color: white;
 					// color: black;
 					font-weight: bold;
@@ -167,6 +164,76 @@
 				}
 				.pic {
 					filter: grayscale(0);
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $tablet) {
+	.department {
+		.wrap {
+			height: 100%;
+			max-width: 1180px;
+			overflow: hidden;
+			padding: 0px 10px;
+		}
+		article {
+			width: 100%;
+
+			.pic {
+				height: 100%;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	.department {
+		h2 {
+			text-align: center;
+		}
+		.list {
+			justify-content: center;
+			margin: 0px auto;
+			li + li {
+				border-left: none;
+			}
+			li {
+				margin-bottom: 30px;
+			}
+		}
+		.wrap {
+			width: 100%;
+			max-width: 1180px;
+			overflow: hidden;
+			padding: 0px 10px;
+			// flex-direction: column;
+			h2 {
+				left: 50%;
+				transform: translateX(-50%);
+			}
+			article {
+				width: 100%;
+				padding: 50px 0px;
+				.txt {
+					padding: 30px 10px 10px;
+				}
+				.pic {
+					height: 100%;
+				}
+				&:hover {
+					.txt {
+						h3 {
+							font-size: 20px;
+							&::after {
+								width: 60px;
+							}
+						}
+						p {
+							font-size: 15px;
+						}
+					}
 				}
 			}
 		}
