--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -75,7 +75,8 @@
 						}
 					}
 					p {
-						opacity: 0;
+						// opacity: 0;
+						opacity: 1;
 						font-size: 14px;
 						font-weight: bold;
 						margin-bottom: 15px;
@@ -85,7 +86,8 @@
 					span {
 						transition: all 0.5s;
 						font-size: 10px;
-						opacity: 0;
+						// opacity: 0;
+						opacity: 1;
 						display: flex;
 						justify-content: space-between;
 						align-items: center;
@@ -133,6 +135,27 @@
 			cursor: pointer;
 			&:hover {
 				color: rgba(235, 213, 69, 0.989);
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $tablet) {
+	.gallery {
+		#wrap {
+			max-width: 1180px;
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	.gallery {
+		#wrap {
+			max-width: 1180px;
+			#list {
+				.item {
+					width: calc(100% / 3);
+				}
 			}
 		}
 	}
