--- a/scss/_join.scss
+++ b/scss/_join.scss
@@ -5,15 +5,15 @@
 			h2 {
 				font-weight: bold;
 				font-size: 30px;
-				line-height: 1px;
 				color: #444;
-				padding-bottom: 60px;
+				margin: 0px 0px 50px;
 			}
 			#terms {
 				width: 100%;
 				height: 200px;
 				resize: none;
 				padding: 10px 20px;
+				margin-bottom: 15px;
 				// font: 13px/1.5 "arial";
 				font-family: "BlackHanSans";
 				font-size: 13px;
@@ -22,9 +22,9 @@
 				background: #efefef;
 			}
 			.agreement {
-				padding-bottom: 70px;
+				margin-bottom: 50px;
 				label[for="agree"] {
-					font-size: 14px;
+					font-size: 16px;
 					font-family: "BlackHanSans";
 				}
 			}
@@ -86,6 +86,58 @@
 					// 	color: hotpink;
 					// 	margin-top: 5px;
 					// }
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $tablet) {
+	.join {
+		.inner {
+			.wrap {
+				max-width: 1180px;
+				padding: 0px 10px;
+				h2 {
+					line-height: 0px;
+				}
+				#terms {
+					height: 100%;
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	.join {
+		.inner {
+			.wrap {
+				table {
+					th {
+						width: 30%;
+					}
+					td {
+						input[type="text"],
+						input[type="password"],
+						select {
+							width: 80%;
+							background: rgba(0, 0, 0, 0.03);
+							padding: 10px;
+							border: 1px solid #aaa;
+						}
+						input[type="radio"],
+						input[type="checkbox"] {
+							margin-right: 5px;
+						}
+						label {
+							font-size: 14px;
+						}
+						#comments {
+							font-size: 15px;
+							width: 100%;
+						}
+					}
 				}
 			}
 		}
