--- a/scss/_sub_layout.scss
+++ b/scss/_sub_layout.scss
@@ -190,12 +190,11 @@
 		min-height: 500px;
 		padding: 0px 0 150px;
 		h1 {
-			// font: bold 50px/1 "arial";
 			font-weight: bold;
 			font-size: 50px;
-			line-height: 1px;
+			// line-height: 1px;
 			color: #000;
-			padding-bottom: 70px;
+			margin-bottom: 70px;
 			span {
 				// font-family: "맑은고딕";
 				font-family: "BlackHanSans";
@@ -275,7 +274,7 @@
 }
 
 @media screen and (max-width: $tablet) {
-	#header {
+	#header_sub {
 		.inner {
 			width: 100%;
 			max-width: 1180px;
@@ -293,117 +292,15 @@
 		}
 	}
 
-	#visual {
-		.slider {
-			.inner {
-				top: 40%;
-				width: 100%;
-				max-width: 1180px;
-				overflow: hidden;
-				padding: 0px 10px;
-				h1 {
-					font: bold 40px/1 "arial";
-				}
-			}
-		}
-		.Slide_btn {
-			.prev {
-				left: 30px;
-			}
-			.next {
-				right: 30px;
-			}
-		}
-	}
-
-	#information.action {
-		padding: 100px 0;
+	.content {
 		.inner {
 			width: 100%;
 			max-width: 1180px;
 			overflow: hidden;
 			padding: 0px 10px;
-			display: block;
-			.wrap {
-				width: 100%;
-				h1 {
-					text-align: center;
-					margin: 30px 0px 40px;
-					padding-top: 0;
-				}
-				p {
-					text-align: center;
-				}
-				a {
-					margin: 30px auto 0px;
-				}
-			}
-		}
-		.QiuckJoin {
-			margin: 50px auto 0;
-			form {
-				h1 {
-					text-align: center;
-				}
-				fieldset {
-					table {
-						th {
-							input[type="submit"] {
-								width: 100%;
-								margin-left: 0px;
-								margin-top: 20px;
-								height: 30px;
-							}
-						}
-					}
-				}
-			}
 		}
 	}
-
-	#services {
-		padding: 100px 0px 600px;
-		.innerH1 {
-			width: 100%;
-			max-width: 1180px;
-			overflow: hidden;
-			padding: 0px 10px;
-		}
-		main {
-			section {
-				article {
-					width: 100%;
-					height: 500px;
-					display: block;
-					.pic {
-						width: 100%;
-						height: auto;
-					}
-					.wrap {
-						height: auto;
-						width: 100%;
-						a {
-							height: auto;
-							width: 100%;
-							padding: 10px 20px;
-							margin: 50px 10px;
-						}
-					}
-				}
-			}
-		}
-	}
-	#LatestProjects {
-		padding: 100px 0px;
-		.inner {
-			.wrap {
-				article {
-					margin-right: 10px;
-				}
-			}
-		}
-	}
-	#footer {
+	#footer_sub {
 		padding: 80px 0;
 		.inner {
 			width: 100%;
@@ -417,125 +314,7 @@
 }
 
 @media screen and (max-width: $mobile) {
-	#visual {
-		.slider {
-			.inner {
-				top: 40%;
-				h1 {
-					font-size: 25px;
-					font-weight: bold;
-				}
-			}
-		}
-		.Slide_btn {
-			.prev {
-				width: 30px;
-				height: 30px;
-				left: 20px;
-			}
-			.next {
-				right: 20px;
-				height: 30px;
-				width: 30px;
-			}
-		}
-	}
-	#information.action {
-		.inner {
-			.wrap {
-				h1 {
-					// font: bold 25px/1 "arial";
-					font-weight: bold;
-					font-size: 25px;
-					line-height: 1px;
-				}
-			}
-		}
-		.QiuckJoin {
-			margin: 50px auto 0;
-		}
-	}
-
-	#services {
-		padding: 100px 0px 400px;
-		.innerH1 {
-			width: 100%;
-			max-width: 1180px;
-			overflow: hidden;
-			padding: 0px 10px;
-		}
-		main {
-			.inner {
-				width: 100%;
-				max-width: 1180px;
-				overflow: hidden;
-				padding: 0px 10px;
-				ul {
-					padding-top: 40px;
-					li {
-						padding: 0px 20px;
-						a {
-							padding: 0px 0px;
-							font: bold 13px/1 "arial";
-						}
-					}
-				}
-			}
-			section {
-				article {
-					display: block;
-					width: 100%;
-					height: 300px;
-					.pic {
-						width: 100%;
-						height: auto;
-					}
-					.wrap {
-						height: auto;
-						width: 100%;
-						padding: 20px 60px 20px 20px;
-						h2 {
-							font: bold 25px/1.3 "arial";
-							padding: 0 0 20px;
-						}
-						p {
-							font: 10px/1.3 "arial";
-						}
-						a {
-							height: auto;
-							width: 100%;
-							padding: 10px 10px;
-							margin: 30px 10px 10px;
-						}
-					}
-				}
-			}
-		}
-	}
-
-	#LatestProjects {
-		padding: 50px 0px;
-		&::after {
-			content: "";
-			display: block;
-			clear: both;
-		}
-		.inner {
-			width: 100%;
-			max-width: 1180px;
-			overflow: hidden;
-			padding: 0px 10px;
-			.wrap {
-				display: flex;
-				flex-direction: column;
-				align-items: center;
-				article {
-					margin-bottom: 20px;
-				}
-			}
-		}
-	}
-	#footer {
+	#footer_sub {
 		.inner {
 			padding: 10px;
 			h1 {
