--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@ $mobile: 539px;
 @import "sub_layout.scss";
 @import "youtube.scss";
 @import "result.scss";
+@import "result2.scss";
 
 .Scroll {
 	position: fixed;
